load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "command_queue_proto",
    srcs = ["command_queue.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "command_queue_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gonzojive/heatpump/proto/command_queue",
    proto = ":command_queue_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "command_queue",
    embed = [":command_queue_go_proto"],
    importpath = "github.com/gonzojive/heatpump/proto/command_queue",
    visibility = ["//visibility:public"],
)
