load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:go_proto_library.bzl", "go_proto_library")

proto_library(
    name = "controller_proto",
    srcs = ["controller.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/fancoil:fancoil_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "controller_go_proto",
    importpath = "github.com/gonzojive/heatpump/proto/controller",
    output_files = ["controller.pb.go"],
    proto = ":controller_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/fancoil"],
)

go_library(
    name = "controller",
    srcs = ["controller.pb.go"],
    importpath = "github.com/gonzojive/heatpump/proto/controller",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
