load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:go_proto_library.bzl", "go_proto_library")

proto_library(
    name = "controller_proto",
    srcs = ["controller.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/fancoil:fancoil_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "controller_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gonzojive/heatpump/proto/controller",
    output_files = ["controller.pb.go"],
    proto = ":controller_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/fancoil:fancoil_go_proto"],
)
